GNOME Bugzilla – Bug 724697
[overview] removed thumbnails are no longer replaced
Last modified: 2014-02-25 17:30:42 UTC
When a thumbnail was removed from the overview it used to be replaced by a new one; with the change to an HTML based overview (bug 723950) this is no longer the case.
Created attachment 270098 [details] [review] overview: adding a new thumbnail after removing another one
On top of the missing functionality reported on the bug, the CSS animation that should happen when removing elements from the overview was not working fine after some revamps on the layout. There is a pathc for it on this bug https://bugzilla.gnome.org/show_bug.cgi?id=724652.
Review of attachment 270098 [details] [review]: Thanks for the patch, I don't understand why you need to move the code from frecent store to ephy-embed-shell. ::: embed/ephy-embed-shell.c @@ +215,3 @@ +static void +ephy_embed_shell_update_urls (EphyHistoryService *history, + EphyEmbedShell *shell) EphyEmbedShell should be the first parameter, not the second. We don't need to pass the history service object, since it's already in the embed shell private struct.. @@ +234,3 @@ + EphyEmbedShell *shell) +{ + ephy_embed_shell_update_urls (history, shell); update_urls is very generic name. I think this should be something like update_history_urls, or update_visited_urls, or even update_overview_urls @@ +238,3 @@ + +static gboolean +ephy_embed_shell_reload_overview (EphyEmbedShell *shell) I would use update instead of reload @@ +242,3 @@ + EphyHistoryService *service; + + g_object_get (ephy_embed_shell_get_frecent_store (shell), "history-service", &service, NULL); You don't need this, and you are leaking the service, since g_object_get returns a new reference.
Created attachment 270254 [details] [review] overview: adding a new thumbnail after removing another one Thanks for the review, I've fixed the commented issues.
Created attachment 270255 [details] [review] overview: adding a new thumbnail after removing another one Fixed coding style issue.
Review of attachment 270255 [details] [review]: LGTM. ::: embed/ephy-embed-shell.c @@ +187,3 @@ + EphyHistoryService *service; + + g_object_get (ephy_embed_shell_get_frecent_store (shell), "history-service", &service, NULL); You don't need this, you can use shell->priv->global_history_service directly here. @@ +198,3 @@ + shell); + ephy_history_query_free (query); + g_object_unref (service); And then you don't need this.
Created attachment 270292 [details] [review] overview: adding a new thumbnail after removing another one Fixed the issue commented.
Comment on attachment 270292 [details] [review] overview: adding a new thumbnail after removing another one Perfect, thanks!