overview: adding a new thumbnail after removing another one

When the user removes an element, all instances of the overview
query the history service to be updated and insert the next
corresponding item.

https://bugzilla.gnome.org/show_bug.cgi?id=724697